--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -56,18 +56,25 @@ jobs:
       - uses: codecov/codecov-action@v2
 
   slither:
+    runs-on: ubuntu-latest
+    steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: 12.x
+      - run: npm install
+      - run: npm run compile
+
       - uses: actions/cache@v2
         id: cache
         with:
           path: '**/node_modules'
           key: npm-v2-${{ hashFiles('**/package-lock.json') }}
           restore-keys: npm-v2-
-      - run: npm ci
-        if: steps.cache.outputs.cache-hit != 'true'
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: pip3 install slither-analyzer
