--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -1,11 +1,5 @@
 name: Slither Analysis
-on:
-  push:
-    branches:
-      - master
-      - release-v*
-  pull_request: {}
-  workflow_dispatch: {}
+on: [push]
 
 jobs:
   analyze:
