--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -5,6 +5,10 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     steps:
+     - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 12.x
       - name: Clean project 
         run: npm run clean
       - uses: actions/checkout@v2
