--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -1,11 +1,6 @@
 name: Slither Analysis
 on:
-  push:
-    branches:
-      - master
-      - release-v*
-  pull_request: {}
-  workflow_dispatch: {}
+  push
 
 jobs:
   analyze:
