--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clean project 
-        run: npm ci
-        run: npm run clean
+        - run: npm ci
+        - run: npm run clean
       - uses: actions/checkout@v2
       - uses: crytic/slither-action@v0.1.0
 
